--- a/README.Rmd
+++ b/README.Rmd
@@ -46,17 +46,70 @@ data for Chicago, IL in the following GIF:
 
 Source: <https://i.imgur.com/K9OalZF.gif>
 
+## Installation
+
+The `uscis` package is a GitHub-only package. You can install the package
+from GitHub with:
+
+```{r}
+#| label: install-pkg
+#| eval: false
+
+# install.packages("remotes")
+remotes::install_github("coatless-r-n-d/ucis-processing")
+```
+
+## Usage
+
+The package provides a set of functions to interact with the USCIS Processing
+Time API. The following is a brief overview of the functions available:
+
+- `uscis_forms()`: Retrieves available USCIS forms.
+- `uscis_form_types()`: Retrieves available subtypes for each USCIS form.
+- `uscis_form_offices()`: Retrieves processing offices for each form type.
+- `uscis_processing_times()`: Retrieves current processing times for USCIS forms.
+
+```{r}
+#| label: usage
+#| eval: false
+
+# Load the library
+library(uscis)
+
+# Retrieve USCIS forms
+forms <- uscis_forms()
+
+# Retrieve form types based on form names
+form_types <- uscis_form_types(forms)
+
+# Retrieve processing offices for each form type
+offices <- uscis_form_offices(form_types)
+
+# Retrieve processing times for each form and office
+processing_times <- uscis_processing_times(offices)
+```
+
+The API is designed to mirror the steps taken by the USCIS Processing Time
+website. The functions are also designed to be used in a pipeline fashion to
+retrieve the desired information.
 
 ## Acknowledgements
 
 ### USCIS
 
-I would like to take a moment to express my gratitude and appreciation to the USCIS team for their hard work and dedication in reviewing and processing immigration forms. Their tireless efforts help individuals and families from around the world to realize their dreams and build new lives in the United States. Thank you for your service to the community and for making a positive impact on so many lives.
+I would like to take a moment to express my gratitude and appreciation to the
+USCIS team for their hard work and dedication in reviewing and processing
+immigration forms. Their tireless efforts help individuals and families from
+around the world to realize their dreams and build new lives in the United States.
+Thank you for your service to the community and for making a positive impact
+on so many lives.
 
 ### Prior work
 
-Retrieved processing time information from the USCIS has been extensively studied, but there has been a lack of
-focus on utilizing the R programming language for this purpose. For non-exhaustive examples of prior projects, please see:
+Retrieved processing time information from the USCIS has been extensively
+studied, but there has been a lack of focus on utilizing the R programming
+language for this purpose. For non-exhaustive examples of prior projects,
+please see:
 
 - [Ariel Rodriguez Romero's exploration of API endpoints](https://github.com/arielsvn/arielsvn.github.io/issues/3)
 - [Data for Democracy's `immigration-connect` (Python)](https://github.com/Data4Democracy/immigration-connect/tree/master/uscis-processing-time)
@@ -64,3 +117,7 @@ focus on utilizing the R programming language for this purpose. For non-exhausti
 - [Gregor Martynus's `uscis-service-center-processing-times` (Node)](https://github.com/gr2m/uscis-service-center-processing-times)
 - [Andrew Duberstein's `uscis-wait-times` (Python)](https://github.com/ajduberstein/uscis-wait-times)
 - [J. Zebedee's `uscis` (SQL)](https://github.com/jzebedee/uscis)
+
+## License
+
+AGPL (>= 2)
