Rename init_uscis_session() to uscis_init_session() for consistency

--- a/README.Rmd
+++ b/README.Rmd
@@ -64,6 +64,7 @@ remotes::install_github("coatless-r-n-d/ucis-processing")
 The package provides a set of functions to interact with the USCIS Processing
 Time API. The following is a brief overview of the functions available:
 
+- `uscis_init_session()`: Initializes a USCIS session.
 - `uscis_forms()`: Retrieves available USCIS forms.
 - `uscis_form_types()`: Retrieves available subtypes for each USCIS form.
 - `uscis_form_offices()`: Retrieves processing offices for each form type.
@@ -75,6 +76,9 @@ Time API. The following is a brief overview of the functions available:
 
 # Load the library
 library(uscis)
+
+# Initialize USCIS session
+uscis_init_session()
 
 # Retrieve USCIS forms
 forms <- uscis_forms()
